--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,71 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Mohamed Amine Frioua
     - name: Date of Birth
-      value: 14th March 1879
+      value: 27th December 1994
     - name: Languages
-      value: English, German
+      value: English, French, Arabic
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Masters of Engineering
+      institution: University of Carthage
+      year: 2019
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Major - Advanced technology and software Engineering
+        - Minor - Nano-Technology
+    - title: Preparatory School of Tunisia diploma
+      institution: Preparatory School of Tunisia
+      year: 2015
       description:
-        - Description 1.
-        - Description 2.
+        - Advanced studies in Math and Physics
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Software Engineer
+      institution: Industrial ML Inc.
+      year: 2021 - now
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Building a data pipeline that does Image classifications on products in real time while streaming on a telemetry kit using Phoenix Elixir.
+        - Working on the telemetry kit that collects realtime data and send it to the cloud using Python and AWS.
+        - Building various features in the IML web platform and mobile application using Ruby on Rails, Flutter and Java.
+
+    - title: Software Engineer
+      institution: 4D sensors Inc.
+      year: 2019 - 2021
       description:
-        - Description 1.
-        - Description 2.
+        - Developing software applications and interfaces using .Net framework and .Net Core (C#, WPF).
+        - Developing real-time analysis software applications based on computer vision algorithms to detect planar vibrations and strain distribution measurements using .Net, Python and Java.
+        - Implementing and developing an algorithm for tracking objects that works with robot arms using C++ and embedded C.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Engineering Intern
+      institution: Fraunhofer IIS.
+      year: 2018 - 2019 
       description:
+        - Testing and learning about the light field acquisition chain and computer vision technologies and algorithms.
+        - Refactoring the light field acquisition chain in Matlab using OOP Design Patterns.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Engineering Intern
+      institution: SagemCom Tunisia.
+      year: 2015 - 2017
+      description:
+        - Programming of a microcontroller circuits for a testing bench for SagemCom Product “Cable receiver and recorder" Using embedded C.
+        - Designing the hardware and the pinout for the Microcontroller (PIC).
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Machine learning.
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - Computer Vision Classification.
+        - Tensor Flow.
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Chess, RPG, Reading, Baseball.
+
