--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,12 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - AmineFrioua
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - AmineFrioua/Arduino-Smart-Garden
+  - AmineFrioua/my_fantasy
+  - AmineFrioua/NNLearning
+  - AmineFrioua/Golang_Arena
+  - AmineFrioua/aminefrioua.github.io
+
+
+
