--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 blog_name: Amine's brain # blog_name will be displayed in your blog page
 blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
-blog_description: Consider this my twitter, less private
+blog_description: Consider this my twitter, less private ( WIP Blogs are unavailable now)
 permalink: /blog/:year/:title/
 
 # Pagination
