cleaning up data

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -7,6 +7,6 @@ github_repos:
   - AmineFrioua/NNLearning
   - AmineFrioua/Golang_Arena
   - AmineFrioua/aminefrioua.github.io
-
+  - AmineFrioua/detect_stuff
 
 
